tests/paczka1/fuzzy1/13747419.err
Error in line 12: QR6pc5YF A980 378,14
Error in line 8: QR6pc5YF A980 98,8
Error in line 14: 6imu A980 24,5
Error in line 18: zeQIi75S A980 78,9
Error in line 29: QR6pc5YF A340 6,2
